JWA-51 Dispatcher approvals validation

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -199,3 +199,4 @@ message.error.createReport=It is forbidden to create complaints about administra
 message.error.captain.unloadError=Form fields during unloading are filled incorrectly
 message.error.captain.actionError=The past performed action is not available
 message.error.captain.productAction=This action with goods is not allowed
+message.error.dispatcher.errorApproval=This request is deprecated
