--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -192,6 +192,7 @@ db.report.text.emptyText=-
 
 message.error.loginPage=Incorrect login or password
 message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
+message.error.adminPiersPage.lockedPier=This pier is busy and cannot be removed
 message.error.moderatorReportsPage.noSuchReport=The id is specified incorrectly or there is no report with such id
 message.error.userForm.invalidData=Invalid data! Try again
 message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
