--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -3,13 +3,13 @@ jdbc.driver.user=SYSTEM
 jdbc.driver.password=admin
 jdbc.driver.name=oracle.jdbc.OracleDriver
 
-dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
-dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
-dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
+dao.user.login.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE login = ?
+dao.user.id.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE id = ?
+dao.user.all.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users
 dao.user.create.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
-dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ? WHERE id=?
-dao.user.all.notAdmins.notModerators.notDeleted.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin' and title <> 'moderator') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted')
-dao.user.all.notAdminsAndModerators.notDeleted.excludeUser.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin' and title <> 'moderator') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted') AND id <> ?
+dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ?, is_online = ? WHERE id=?
+dao.user.all.notAdmins.notModerators.notDeleted.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin' and title <> 'moderator') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted')
+dao.user.all.notAdminsAndModerators.notDeleted.excludeUser.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin' and title <> 'moderator') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted') AND id <> ?
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
@@ -51,6 +51,7 @@ dao.user.column.login=LOGIN
 dao.user.column.password=PASSWORD
 dao.user.column.roleId=ROLE_ID
 dao.user.column.statusId=STATUS_ID
+dao.user.column.online=IS_ONLINE
 
 dao.role.column.id=ID
 dao.role.column.title=TITLE
@@ -155,6 +156,9 @@ request.uploadCommand.parameter.products.ids=productsIds
 
 request.showProductsInfoCommand.parameter.products=products
 
+request.user.login=login
+request.user.password=password
+
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
@@ -180,6 +184,7 @@ session.attribute.name.user=user
 servlet.context.attribute.name.allRoles=allRoles
 servlet.context.attribute.name.commandsFactory=commandFactory
 servlet.context.attribute.name.activeStatus=activeStatus
+servlet.context.attribute.name.user.dao=userDao
 
 db.status.active=active
 db.status.blocked=blocked
