feat(db): oracle to postgre migration

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -1,7 +1,7 @@
-jdbc.driver.url=jdbc:oracle:thin:@localhost:1521/XE
-jdbc.driver.user=SYSTEM
+jdbc.driver.url=jdbc:postgresql://localhost:5432/harbor
+jdbc.driver.user=admin
 jdbc.driver.password=admin
-jdbc.driver.name=oracle.jdbc.OracleDriver
+jdbc.driver.name=org.postgresql.Driver
 
 dao.user.login.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE login = ?
 dao.user.id.sql=SELECT id, login, password, role_id, status_id, is_online FROM harbour_users WHERE id = ?
@@ -35,8 +35,8 @@ dao.report.save.sql=INSERT INTO reports (user_from_id, user_to_id, text) VALUES 
 dao.product.id.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
 dao.product.all.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products
 dao.product.all.in.harbour.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products WHERE departure_date IS NULL
-dao.product.save.sql=INSERT INTO products(title, quantity, captain_id, pier_id, arrival_date, departure_date) VALUES (?, ?, ?, ?, (SELECT SYSDATE FROM DUAL), NULL)
-dao.product.update.sql=UPDATE products SET departure_date = (SELECT SYSDATE FROM DUAL) WHERE id = ?
+dao.product.save.sql=INSERT INTO products(title, quantity, captain_id, pier_id, arrival_date, departure_date) VALUES (?, ?, ?, ?, (SELECT CURRENT_DATE), NULL)
+dao.product.update.sql=UPDATE products SET departure_date = (SELECT CURRENT_DATE) WHERE id = ?
 
 dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE id = ?
 dao.pier_assignment.pier_id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE pier_id = ?
@@ -46,38 +46,38 @@ dao.pier_assignment.delete.sql=DELETE FROM pier_assignments WHERE id = ?
 dao.pier_assignment.update.sql=UPDATE pier_assignments SET pier_id = ?, user_id = ?, request_status_id = ? WHERE id = ?
 dao.pier_assignment.all.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments
 
-dao.user.column.id=ID
-dao.user.column.login=LOGIN
-dao.user.column.password=PASSWORD
-dao.user.column.roleId=ROLE_ID
-dao.user.column.statusId=STATUS_ID
-dao.user.column.online=IS_ONLINE
+dao.user.column.id=id
+dao.user.column.login=login
+dao.user.column.password=password
+dao.user.column.roleId=role_id
+dao.user.column.statusId=status_id
+dao.user.column.online=is_online
 
-dao.role.column.id=ID
-dao.role.column.title=TITLE
+dao.role.column.id=id
+dao.role.column.title=title
 
-dao.status.column.id=ID
-dao.status.column.title=TITLE
+dao.status.column.id=id
+dao.status.column.title=title
 
-dao.pier.column.id=ID
+dao.pier.column.id=id
 
-dao.report.column.id=ID
-dao.report.column.from_id=USER_FROM_ID
-dao.report.column.to_id=USER_TO_ID
-dao.report.column.text=TEXT
+dao.report.column.id=id
+dao.report.column.from_id=user_from_id
+dao.report.column.to_id=user_to_id
+dao.report.column.text=text
 
-dao.product.column.id=ID
-dao.product.column.title=TITLE
-dao.product.column.quantity=QUANTITY
-dao.product.column.captain_id=CAPTAIN_ID
-dao.product.column.pier_id=PIER_ID
-dao.product.column.arrival_date=ARRIVAL_DATE
-dao.product.column.departure_date=DEPARTURE_DATE
+dao.product.column.id=id
+dao.product.column.title=title
+dao.product.column.quantity=quantity
+dao.product.column.captain_id=captain_id
+dao.product.column.pier_id=pier_id
+dao.product.column.arrival_date=arrival_date
+dao.product.column.departure_date=departure_date
 
-dao.pier_assignment.column.id=ID
-dao.pier_assignment.column.pier_id=PIER_ID
-dao.pier_assignment.column.user_id=USER_ID
-dao.pier_assignment.column.request_status_id=REQUEST_STATUS_ID
+dao.pier_assignment.column.id=id
+dao.pier_assignment.column.pier_id=pier_id
+dao.pier_assignment.column.user_id=user_id
+dao.pier_assignment.column.request_status_id=request_status_id
 
 path.page.login=/jsp/login.jsp
 path.page.admin=/jsp/admin.jsp
@@ -186,7 +186,6 @@ servlet.context.attribute.name.commandsFactory=commandFactory
 servlet.context.attribute.name.activeStatus=activeStatus
 servlet.context.attribute.name.user.dao=userDao
 
-db.status.active=active
 db.status.blocked=blocked
 db.requestStatus.requested_arrival=requested_arrival
 db.requestStatus.approved_arrival=approved_arrival
